[kanchan]Refactor notes and users api on swagger
